# wsl-process-monitor

./: .gitignore  FINAL_SOLUTION.md  FRONTEND_SETUP.md  README.md  install_mysql_support.py  mysql_unified_server.py  start.py  start_backend.bat  start_frontend.bat  start_frontend.py  start_server.py  start_simple.py  unified_server.py  verify.py
backend/: pyproject.toml  requirements.txt  start_server.py
backend/app/: config.example.json  config.py  database.py  main.py  mysql_database.py
backend/app/api/: routes.py  websocket.py
backend/app/services/: optimized_process_service.py  process_service.py  wsl_service.py
docs/: development.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/components/: ProcessMonitor.vue
frontend/src/views/: Home.vue
scripts/: setup.py
shared/: types.py  types.ts
